--- a/pages/admin.html
+++ b/pages/admin.html
@@ -39,34 +39,7 @@
 
 <body class="about-page">
 
-  <header id="header" class="header d-flex align-items-center fixed-top">
-    <div
-      class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
-
-      <a href="../index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="/assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename">WordlAgency</h1>
-      </a>
-
-      <nav id="navmenu" class="navmenu">
-        <ul>
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="about.html">Sobre Nosotros</a></li>
-          <li><a href="destinations.html">Destinos</a></li>
-          <li><a href="tours.html">Tours</a></li>
-          <li><a href="login.html">Iniciar Sesión</a></li>
-        </ul>
-        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-      </nav>
-
-      <a class="btn-shopping-cart" href="/pages/car.html"><i class="bi bi-cart"></i><span
-          class="badge bg-danger">2</span></a>
-
-      <a class="btn-getstarted" href="/pages/register.html">Registrarse</a>
-
-    </div>
-  </header>
+  <div id="app-header"></div>
 
   <main class="main">
 
@@ -265,9 +238,12 @@
               </div>
               <div class="row">
                 <div class="col-md-6 mb-3">
-                  <label for="tourCityId" class="form-label">ID Ciudad</label>
-                  <input type="number" class="form-control" id="tourCityId" autocomplete="off" required>
-                  <small class="text-muted">Ingrese el ID numérico de la ciudad.</small>
+                  <label for="tourCityId" class="form-label">Ciudad</label>
+                  <select class="form-select" id="tourCityId" required>
+                    <option value="" selected disabled>Seleccione una ciudad</option>
+                    <option value="1">San Juan</option>
+                    <option value="2">Guayaquil</option>
+                  </select>
                 </div>
                 <div class="col-md-6 mb-3">
                   <label for="tourActivityType" class="form-label">Tipo Actividad</label>
@@ -281,15 +257,18 @@
               <div class="row">
                 <div class="col-md-4 mb-3">
                   <label for="tourPrice" class="form-label">Precio Base</label>
-                  <input type="number" class="form-control" id="tourPrice" step="0.01" autocomplete="off" required>
+                  <input type="number" class="form-control" id="tourPrice" step="0.01" min="0" autocomplete="off"
+                    required>
                 </div>
                 <div class="col-md-4 mb-3">
                   <label for="tourCapacity" class="form-label">Cupo Máximo</label>
-                  <input type="number" class="form-control" id="tourCapacity" autocomplete="off" required>
+                  <input type="number" class="form-control" id="tourCapacity" min="1" max="30" autocomplete="off"
+                    required>
                 </div>
                 <div class="col-md-4 mb-3">
                   <label for="tourDuration" class="form-label">Duración (Días)</label>
-                  <input type="number" class="form-control" id="tourDuration" autocomplete="off" required>
+                  <input type="number" class="form-control" id="tourDuration" min="1" max="3" autocomplete="off"
+                    required>
                 </div>
               </div>
               <div class="mb-3">
@@ -394,47 +373,7 @@
     </section><!-- End Admin Dashboard Section -->
 
   </main>
-  <footer id="footer" class="footer position-relative dark-background">
-
-    <div class="container footer-top">
-      <div class="row gy-4">
-        <div class="col-lg-4 col-md-6 footer-about">
-          <a href="index.html" class="d-flex align-items-center">
-            <span class="sitename">Tour</span>
-          </a>
-          <div class="footer-contact pt-3">
-            <p>Av. 9 de Octubre</p>
-            <p>Guayaquil, Ecuador</p>
-            <p class="mt-3"><strong>Teléfono:</strong> <span>+593 987654321</span></p>
-            <p><strong>Correo:</strong> <span>wordlagency@gmail.com</span></p>
-          </div>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
-          <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Inicio</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Sobre Nosotros</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Destinos</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Tours</a></li>
-          </ul>
-        </div>
-
-
-        <div class="col-lg-4 col-md-12">
-          <h4>Síguenos</h4>
-          <p>Nuestros canales de redes sociales</p>
-          <div class="social-links d-flex">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </footer>
+  <div id="app-footer"></div>
 
 
   <!-- Scroll Top -->
@@ -455,7 +394,10 @@
   <script src="../vendor/glightbox/js/glightbox.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="../js/main.js"></script>
+  <script type="module">
+    import { renderLayout } from '../src/components/Layout.js';
+    renderLayout();
+  </script>
 
 
   <script type="module" src="../src/controllers/AdminController.js"></script>
