--- a/pages/car.html
+++ b/pages/car.html
@@ -40,34 +40,7 @@
 
 <body class="shopping-cart-page">
 
-  <header id="header" class="header d-flex align-items-center fixed-top">
-    <div
-      class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
-
-      <a href="../index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="/assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename">WordlAgency</h1>
-      </a>
-
-      <nav id="navmenu" class="navmenu">
-        <ul>
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="about.html">Sobre Nosotros</a></li>
-          <li><a href="destinations.html">Destinos</a></li>
-          <li><a href="tours.html">Tours</a></li>
-          <li><a href="login.html">Iniciar Sesión</a></li>
-        </ul>
-        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-      </nav>
-
-      <a class="btn-shopping-cart" href="/pages/car.html"><i class="bi bi-cart"></i><span
-          class="badge bg-danger">2</span></a>
-
-      <a class="btn-getstarted" href="/pages/register.html">Registrarse</a>
-
-    </div>
-  </header>
+  <div id="app-header"></div>
 
   <main class="main">
 
@@ -135,75 +108,35 @@
 
   </main>
 
-  <footer id="footer" class="footer position-relative dark-background">
+  <div id="app-footer"></div>
 
 
-    <footer id="footer" class="footer position-relative dark-background">
+  <!-- Scroll Top -->
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
-      <div class="container footer-top">
-        <div class="row gy-4">
-          <div class="col-lg-4 col-md-6 footer-about">
-            <a href="index.html" class="d-flex align-items-center">
-              <span class="sitename">Tour</span>
-            </a>
-            <div class="footer-contact pt-3">
-              <p>Av. 9 de Octubre</p>
-              <p>Guayaquil, Ecuador</p>
-              <p class="mt-3"><strong>Teléfono:</strong> <span>+593 987654321</span></p>
-              <p><strong>Correo:</strong> <span>wordlagency@gmail.com</span></p>
-            </div>
-          </div>
+  <!-- Preloader -->
+  <div id="preloader"></div>
 
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Inicio</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Sobre Nosotros</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Destinos</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Tours</a></li>
-            </ul>
-          </div>
+  <!-- Vendor JS Files -->
+  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../vendor/php-email-form/validate.js"></script>
+  <script src="../vendor/aos/aos.js"></script>
+  <script src="../vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="../vendor/glightbox/js/glightbox.min.js"></script>
 
+  <!-- Main JS File -->
+  <script type="module">
+    import { renderLayout } from '../src/components/Layout.js';
+    renderLayout();
+  </script>
 
-          <div class="col-lg-4 col-md-12">
-            <h4>Síguenos</h4>
-            <p>Nuestros canales de redes sociales</p>
-            <div class="social-links d-flex">
-              <a href=""><i class="bi bi-twitter-x"></i></a>
-              <a href=""><i class="bi bi-facebook"></i></a>
-              <a href=""><i class="bi bi-instagram"></i></a>
-              <a href=""><i class="bi bi-linkedin"></i></a>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </footer>
-
-
-    <!-- Scroll Top -->
-    <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
-        class="bi bi-arrow-up-short"></i></a>
-
-    <!-- Preloader -->
-    <div id="preloader"></div>
-
-    <!-- Vendor JS Files -->
-    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../vendor/php-email-form/validate.js"></script>
-    <script src="../vendor/aos/aos.js"></script>
-    <script src="../vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="../vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="../vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="../vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-    <script src="../vendor/glightbox/js/glightbox.min.js"></script>
-
-    <!-- Main JS File -->
-    <script src="../js/main.js"></script>
-
-    <!-- Cart Logic -->
-    <script type="module" src="../src/controllers/CartController.js"></script>
-    <script type="module" src="../src/controllers/AuthController.js"></script>
+  <!-- Cart Logic -->
+  <script type="module" src="../src/controllers/CartController.js"></script>
+  <script type="module" src="../src/controllers/AuthController.js"></script>
 
 </body>
 
