--- a/pages/destinations.html
+++ b/pages/destinations.html
@@ -40,214 +40,109 @@
 
 <body class="destinations-page">
 
-  <header id="header" class="header d-flex align-items-center fixed-top">
-    <div
-      class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+  <div id="app-header"></div>
 
-      <a href="../index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="/assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename">WordlAgency</h1>
-      </a>
+  <main class="main">
 
-      <nav id="navmenu" class="navmenu">
-        <ul>
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="/pages/about.html">Sobre Nosotros</a></li>
-          <li><a href="/pages/destinations.html">Destinos</a></li>
-          <li><a href="/pages/tours.html">Tours</a></li>
-          <li><a href="/pages/login.html" class="active">Iniciar Sesión</a></li>
-        </ul>
-        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-      </nav>
-
-      <a class="btn-shopping-cart" href="/pages/car.html"><i class="bi bi-cart"></i><span
-          class="badge bg-danger">2</span></a>
-
-      <a class="btn-getstarted" href="/pages/register.html">Registrarse</a>
-
-    </div>
-  </header>
-
-
-  <!-- =======================================================
-  * Template Name: Tour
-  * Template URL: https://bootstrapmade.com/tour-bootstrap-travel-website-template/
-  * Updated: Jul 01 2025 with Bootstrap v5.3.7
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
-  </head>
-
-  <body class="about-page">
-
-    <header id="header" class="header d-flex align-items-center fixed-top">
-      <div
-        class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
-
-        <a href="../index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-          <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="/assets/img/logo.webp" alt=""> -->
-          <h1 class="sitename">WordlAgency</h1>
-        </a>
-
-        <nav id="navmenu" class="navmenu">
-          <ul>
+    <!-- Page Title -->
+    <div class="page-title dark-background" data-aos="fade"
+      style="background-image: url(/assets/img/travel/showcase-8.webp);">
+      <div class="container position-relative">
+        <h1>Destinos</h1>
+        <nav class="breadcrumbs">
+          <ol>
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="/pages/about.html">Sobre Nosotros</a></li>
-            <li><a href="/pages/destinations.html">Destinos</a></li>
-            <li><a href="/pages/tours.html">Tours</a></li>
-            <li><a href="/pages/login.html" class="active">Iniciar Sesión</a></li>
-          </ul>
-          <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+            <li class="current">Destinos</li>
+          </ol>
         </nav>
-
-        <a class="btn-shopping-cart" href="/pages/car.html"><i class="bi bi-cart"></i><span
-            class="badge bg-danger">2</span></a>
-
-        <a class="btn-getstarted" href="/pages/register.html">Registrarse</a>
-
       </div>
-    </header>
+    </div><!-- End Page Title -->
 
-    <main class="main">
+    <!-- Travel Destinations Section -->
+    <section id="travel-destinations" class="travel-destinations section">
 
-      <!-- Page Title -->
-      <div class="page-title dark-background" data-aos="fade"
-        style="background-image: url(/assets/img/travel/showcase-8.webp);">
-        <div class="container position-relative">
-          <h1>Destinos</h1>
-          <nav class="breadcrumbs">
-            <ol>
-              <li><a href="../index.html">Inicio</a></li>
-              <li class="current">Destinos</li>
-            </ol>
-          </nav>
-        </div>
-      </div><!-- End Page Title -->
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-      <!-- Travel Destinations Section -->
-      <section id="travel-destinations" class="travel-destinations section">
-
-        <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-          <div class="row">
-            <div class="col-lg-8 mx-auto text-center">
-              <h2>Atrapa Experiencias en Aventuras Inolvidables</h2>
-              <p class="mb-5">Descubre las ciudades más hermosas de Latinoamérica.</p>
-            </div>
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2>Atrapa Experiencias en Aventuras Inolvidables</h2>
+            <p class="mb-5">Descubre las ciudades más hermosas de Latinoamérica.</p>
           </div>
-
-          <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
-
-            <div class="col-lg-4 col-md-6 destination-item isotope-item filter-coastal">
-              <a href="destination-details.html" class="destination-tile">
-                <div class="tile-image">
-                  <img src="../assets/img/travel/sanjuan.jpg" alt="Maldives" class="img-fluid" loading="lazy">
-                  <div class="overlay-content">
-                    <span class="destination-tag luxury">Tour</span>
-                    <div class="destination-info">
-                      <h4>San Juan</h4>
-                      <p>Visita lo más puro de la capital ed Puerto Rico</p>
-                      <div class="destination-stats">
-                        <span class="tours-available"><i class="bi bi-map"></i> 4 Escursiones</span>
-                        <span class="starting-price">Desde $20</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div><!-- End Destination Item -->
-
-            <div class="col-lg-4 col-md-6 destination-item isotope-item filter-historical">
-              <a href="destination-details.html" class="destination-tile">
-                <div class="tile-image">
-                  <img src="../assets/img/travel/guayaquil.jpg" alt="Rome, Italy" class="img-fluid" loading="lazy">
-                  <div class="overlay-content">
-                    <span class="destination-tag cultural">Historico</span>
-                    <div class="destination-info">
-                      <h4>Guayaquil</h4>
-                      <p>Disfruta, la época colonial de Guayaquil .</p>
-                      <div class="destination-stats">
-                        <span class="tours-available"><i class="bi bi-map"></i> 4 Escursiones</span>
-                        <span class="starting-price">Desde $20</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div><!-- End Destination Item -->
-          </div><!-- End Destinations Container -->
-
         </div>
 
-      </section><!-- /Travel Destinations Section -->
+        <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
 
-    </main>
-
-    <footer id="footer" class="footer position-relative dark-background">
-
-      <div class="container footer-top">
-        <div class="row gy-4">
-          <div class="col-lg-4 col-md-6 footer-about">
-            <a href="index.html" class="d-flex align-items-center">
-              <span class="sitename">Tour</span>
+          <div class="col-lg-4 col-md-6 destination-item isotope-item filter-coastal">
+            <a href="destination-details.html" class="destination-tile">
+              <div class="tile-image">
+                <img src="../assets/img/travel/sanjuan.jpg" alt="Maldives" class="img-fluid" loading="lazy">
+                <div class="overlay-content">
+                  <span class="destination-tag luxury">Tour</span>
+                  <div class="destination-info">
+                    <h4>San Juan</h4>
+                    <p>Visita lo más puro de la capital ed Puerto Rico</p>
+                    <div class="destination-stats">
+                      <span class="tours-available"><i class="bi bi-map"></i> 4 Escursiones</span>
+                      <span class="starting-price">Desde $20</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </a>
-            <div class="footer-contact pt-3">
-              <p>Av. 9 de Octubre</p>
-              <p>Guayaquil, Ecuador</p>
-              <p class="mt-3"><strong>Teléfono:</strong> <span>+593 987654321</span></p>
-              <p><strong>Correo:</strong> <span>wordlagency@gmail.com</span></p>
-            </div>
-          </div>
+          </div><!-- End Destination Item -->
 
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Inicio</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Sobre Nosotros</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Destinos</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Tours</a></li>
-            </ul>
-          </div>
+          <div class="col-lg-4 col-md-6 destination-item isotope-item filter-historical">
+            <a href="destination-details.html" class="destination-tile">
+              <div class="tile-image">
+                <img src="../assets/img/travel/guayaquil.jpg" alt="Rome, Italy" class="img-fluid" loading="lazy">
+                <div class="overlay-content">
+                  <span class="destination-tag cultural">Historico</span>
+                  <div class="destination-info">
+                    <h4>Guayaquil</h4>
+                    <p>Disfruta, la época colonial de Guayaquil .</p>
+                    <div class="destination-stats">
+                      <span class="tours-available"><i class="bi bi-map"></i> 4 Escursiones</span>
+                      <span class="starting-price">Desde $20</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div><!-- End Destination Item -->
+        </div><!-- End Destinations Container -->
 
-
-          <div class="col-lg-4 col-md-12">
-            <h4>Síguenos</h4>
-            <p>Nuestros canales de redes sociales</p>
-            <div class="social-links d-flex">
-              <a href=""><i class="bi bi-twitter-x"></i></a>
-              <a href=""><i class="bi bi-facebook"></i></a>
-              <a href=""><i class="bi bi-instagram"></i></a>
-              <a href=""><i class="bi bi-linkedin"></i></a>
-            </div>
-          </div>
-
-        </div>
       </div>
-    </footer>
+
+    </section><!-- /Travel Destinations Section -->
+
+  </main>
+
+  <div id="app-footer"></div>
 
 
-    <!-- Scroll Top -->
-    <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
-        class="bi bi-arrow-up-short"></i></a>
+  <!-- Scroll Top -->
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
-    <!-- Preloader -->
-    <div id="preloader"></div>
+  <!-- Preloader -->
+  <div id="preloader"></div>
 
-    <!-- Vendor JS Files -->
-    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../vendor/php-email-form/validate.js"></script>
-    <script src="../vendor/aos/aos.js"></script>
-    <script src="../vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="../vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="../vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="../vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-    <script src="../vendor/glightbox/js/glightbox.min.js"></script>
+  <!-- Vendor JS Files -->
+  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../vendor/php-email-form/validate.js"></script>
+  <script src="../vendor/aos/aos.js"></script>
+  <script src="../vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="../vendor/glightbox/js/glightbox.min.js"></script>
 
-    <!-- Main JS File -->
-    <script src="../js/main.js"></script>
+  <!-- Main JS File -->
+  <script type="module">
+    import { renderLayout } from '../src/components/Layout.js';
+    renderLayout();
+  </script>
 
-  </body>
+</body>
 
 </html>
